config/components/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kueue-viz-backend
  namespace: system
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kueue-viz-backend
